-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
Qt Creator 4.4.0-beta1
-
None
-
Windows 10, MSVC2017 64/32bit, MinGW 32bit
When auto-configuring kits from newly checked out Qt versions; the C/C++ compilers are sometimes detected inconsistently.
For 32bit MSVC builds, it has been observed that the C compiler is MSVC 32bit whereas the C++ compiler is MSVC 64bit.
For 64bit MSVC builds, it has been observed that the C compiler is MSVC 64bit whereas the C++ compiler is MinGW g++.
For Gerrit Dashboard: QTCREATORBUG-18571 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
201758,2 | Kit: Improve toolchain setup on auto-detected kit setup | 4.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |